--- a/html-css/exercicios/ex002/index.html
+++ b/html-css/exercicios/ex002/index.html
@@ -11,10 +11,11 @@
   <hr>
   <p>Você pode escrever um 
     parágrafo de qualquer
-    jeito. Basta colocar tudo no meio 
-    do par de tags &lt;p&gt; e &lt;/p&gt;. <!-- Less Than / Greater than -->
+    jeito. Basta colocar 
+    tudo no meio do par de 
+    tags &lt;p&gt; e &lt;/p&gt;. <!-- Less Than / Greater than -->
   </p>
-  <p>Se precisar quebrar o texto em algum lugar específico como esse,<br> você pode usar a tag &lt;br&gt;.
+  <p>Se precisar quebrar o texto em algum lugar específico como esse,<br> você pode usar a tag &lt;br&gt;. <!-- br = break row -->
   </p>
   <p>Vamos adicionar alguns símbolos especiais:
     &reg;
