--- a/html-css/exercicios/ex008/index.html
+++ b/html-css/exercicios/ex008/index.html
@@ -4,34 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formatação de Textos</title>
-  <style>
-    mark {
-      background-color: limegreen;
-    }
-  </style>
+  <title>Outras formatações</title>
 </head>
 <body>
-  <h1>Principais formatações</h1>
-  <h2>Negrito / Destaque</h2>
-  <p>Nessa frase, um <b>termo em negrito</b> usando a tag b (não semântica).</p>
-  <p>Nesta frase, tenho um <strong>termo em destaque</strong> usando a tag strong (semântica).</p>
-  <h2>Itálico / Ênfase</h2>
-  <p>Nesta frase, temos um <i>termo em itálico</i> usando a tag (não semântica).</p>
-  <p>Nesa frase, temos um <em>termo em ênfase</em> usando a tag em (semântica).</p>
-  <h2>Texto marcado</h2>
-  <p>Podemos criar também <mark>um texto marcado</mark> usando a tag mark.</p>
-  <p>E no outro parágrafo temos <mark>outro texto marcado</mark> no final.</p>
-  <h2>Texto grande e pequeno</h2>
-  <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small>.</p>
-  <h2>Texto deletado</h2>
-  <p>Podemos marcar um <del>texto como excluído</del> para indicar que ele deve ser lido, mas não considerado.</p>
-  <h2>Texto inserido</h2>
-  <p>Podemos marcar um <ins>texto como inserido</ins> para dar uma ênfase e indicar que ele foi adicionado depois.</p>
-  <p>Existe também o <u>sublinhado</u> com a tag u (não semântica).</p>
-  <h2>Texto sobrescrito</h2>
-  <p>Para inserir coisas do tipo x<sup>20</sup> + 3</p>
-  <h2>Texto subscrito</h2>
-  <p>Para inserir coisas do tipo H<sub>2</sub>O</p>
+  <h1>Outras formatações/Pré formatação</h1>
+  <h2>Código-fonte</h2>
+  <p>O comando <code>document.getElementById('teste')</code> é escrito em linguagem JavaScript.</p>
+  <pre>
+    <code>
+  num = int(input('Digite um número inteiro'))
+  if num % 2 == 0
+    print('O número {} é par.'.format(num))
+  else:
+    print('O número {} é ímpar.'.format(num))
+  print('Fim do programa')
+    </code>
+  </pre>
+  <h2>Citações simples.</h2>
+  <p>Como diria um pai de um amigo: <q>O computador é um burro muito rápido.</q></p>
+  <h2>Citações completas</h2>
+  <p>Segundo Siamark Sarmady, no seu livro HTML web design in 7 days!:</p>
+  <blockquote cite="https://www.google.ca/books/edition/HTML_Web_Design_in_7_Days/YwEQoMAJjj8C?hl=pt-BR&gbpv=1&dq=html&pg=PT3&printsec=frontcover">
+    Web pages are ordinary files with "htm" or ".html" files extensions.
+  </blockquote>
+  <h2>Abreviações</h2>
+  <p>Estou estudando <abbr title="HyperText Markup Language">HTML</abbr> e <abbr title="Cascating Style Sheets">CSS</abbr>.</p>
+  <h2>Texto invertido</h2>
+  <p><bdo dir="rtl">Estou aprendendo a criar coias em HTML.</bdo></p>
 </body>
 </html>
