--- a/html-css/exercicios/ex007/index.html
+++ b/html-css/exercicios/ex007/index.html
@@ -17,7 +17,7 @@
   <p>Nessa frase, um <b>termo em negrito</b> usando a tag b (não semântica).</p>
   <p>Nesta frase, tenho um <strong>termo em destaque</strong> usando a tag strong (semântica).</p>
   <h2>Itálico / Ênfase</h2>
-  <p>Nesta frase, temos um <i>termo em itálico</i> usando a tag (não semântica).</p>
+  <p>Nesta frase, temos um <i>termo em itálico</i> usando a tag i (não semântica).</p>
   <p>Nesa frase, temos um <em>termo em ênfase</em> usando a tag em (semântica).</p>
   <h2>Texto marcado</h2>
   <p>Podemos criar também <mark>um texto marcado</mark> usando a tag mark.</p>
