--- a/html-css/desafios/d006/index.html
+++ b/html-css/desafios/d006/index.html
@@ -26,6 +26,7 @@
     <li><abbr title="Use a tag <ins>">Texto inserido</abbr></li>
     <li><abbr title="Use a tag <q>">Citação simples</abbr></li>
     <li><abbr title="Use a tag <blockquote>">Citação completa</abbr></li>
+    <li><abbr title="Use a tag <a> para criar um link">Link</abbr></li>
   </ul>
 </body>
 </html>
