--- a/html-css/exercicios/ex011/index.html
+++ b/html-css/exercicios/ex011/index.html
@@ -15,5 +15,13 @@
     <source media="(max-width: 1050px)" srcset="imagens/foto-m.png" type="image/png">
     <img src="imagens/foto-g.png" alt="Imagem flexível">
   </picture>
+
+  <h1>Reproduzindo áudio</h1>
+  <p>Vamos aprender a reproduzir áudios em HTML5.</p>
+  <!-- <audio src="midia/flying.mp3" controls autoplay></audio> -->
+  <audio preload="metadata" autoplay controls loop>
+    <source src="midia/flying.mp3" type="audio/mpeg">
+    <p>Infelizmente seu navegador não é compatível com o áudio. <a href="midia/flying.mp3">Clique aqui para baixar o arquivo</a></p>
+  </audio>
 </body>
 </html>
