--- a/html-css/exercicios/ex012/index.html
+++ b/html-css/exercicios/ex012/index.html
@@ -9,11 +9,17 @@
 <body>
   <h1>Inserindo vídeos hospedados localmente</h1>
   <p>Este vídeo está hospedado no meu próprio servidor.</p>
-  <video width="500" poster="imagens/foto-m.png" controls>
+  <video width="560" poster="imagens/foto-m.png" controls autoplay loop>
     <source src="midia/meu-video.ogv" type="video/ogv">
     <source src="midia/meu-video.webm" type="video/webm">
     <source src="midia/meu-video.mp4" type="video/mp4">
     <p>Infelizmente, seu navegador não tem compatibilidade com este vídeo</p>
   </video>
+
+  <h1>Inserindo vídeos do Youtube</h1>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/FdE5G95B7Mg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+  <h1>Inserindo vídeos do Vimeo</h1>
+  <iframe src="https://player.vimeo.com/video/122389390?h=58841deb55&portrait=0" width="560" height="315" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
